--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           gh release create nightly --prerelease --title "Nightly" --target $GITHUB_SHA motch
 
       - if: startsWith(github.ref, 'refs/tags/')
-        run: echo "TAG_NAME=${github.ref_name}" >> $GITHUB_ENV
+        run: echo "TAG_NAME=${{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Publish release
         if: startsWith(github.ref, 'refs/tags/')
